--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -1,7 +1,40 @@
 .b-post{
     width: 400px;
-    padding: 10px 20px;
     color: var(--color-medium);
     background-color: var(--color);
     border-radius: 10px;
+    &__title{
+        display: flex;
+        min-height: 20px;
+        font-size: 16px;
+        font-family: Rokkitt-Light;
+        color: var(--color);
+        background-color: var(--color-active);
+        border-radius: 10px 10px 0 0;
+        & h3{
+            margin: 10px;
+        }
+    }
+    &__body{
+        margin: 20px 10px;
+        font-size: 16px;
+        font-family: Rokkitt-Regular;
+        color: var(--color-medium);
+    }
+    &__image{
+        width: 100%;
+    }
+    &__date{
+        display: flex;
+        justify-content: end;
+        margin-right: 10px;
+        min-height: 20px;
+        font-size: 16px;
+        font-family: Rokkitt-Regular;
+        color: var(--color-active);
+    }
+    &__user{
+        position: relative;
+        margin-bottom: 50px;
+    }
 }
