--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -1,11 +1,11 @@
-.b-login{
+.b-register{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     height:100%;
 }
-.b-login-form{
+.b-register-form{
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -56,7 +56,7 @@
         color: var(--color-medium);
     }
 }
-.b-login-info{
+.b-register-info{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,17 +71,3 @@
         color: var(--color-medium);
     }
 }
-.btn-close-login{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 30px;
-    border: none;
-    background: none;
-    color: var(--color);
-    transition: transform 0.2s ease-in-out;
-    cursor: pointer;
-    &:hover{
-        transform: scale(1.05);
-    }
-  }
