--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -44,11 +44,11 @@
     align-items: center;
     top: -25px;
     left: 20px;
+    gap: 20px;
     &__avatar{
         border-radius: 100%;     
         height: 80px;
         width: 80px;
-        margin-right: 10px;
         &__default{
             background-color: var(--color-active);
         }
@@ -56,5 +56,12 @@
     &__name{
         font-size: 14px;
         font-family: Rokkitt-Light;
+    }
+    &__icon{
+        margin: 0px 5px;
+        cursor: pointer;
+        &:hover{
+            color: var(--color-active);
+        }
     }
 }
