--- a/src/styles/settings/_colors.settings.scss
+++ b/src/styles/settings/_colors.settings.scss
@@ -1,7 +1,8 @@
 :root{
     --color: #fff;
     --color-light: #888888;
-    --color-medium: #2e2b2b;
+    --color-medium: #192433;
     --color-dark: #000;
-    --color-active: #aa7190;
+    --color-active: #19a582;
+    --color-alert: #a72222;
 }
