--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,12 +1,32 @@
 .b-header{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 90px;
+    &__logo{
+        width: 20%;
+    }
     &__section{
+        width: 20%;
         gap: 20px;
     }
 }
 .logo{
     height: 80px;
+    cursor: pointer;
+}
+@media only screen and (max-width: 600px) {
+    .b-header{
+        &__section{
+            position: fixed;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 60px;
+            bottom: 0;
+            background-color: var(--color-medium);
+            z-index: 999;
+        }
+    }
 }
