--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -3,60 +3,30 @@
   align-items: center;
   gap: 30px;
   list-style: none;
-
   &__link a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
     color: var(--color);
     text-decoration: none;
   }
-
   &__icon {
     color: var(--color);
     font-size: 30px !important;
     transition: transform 0.25s ease-in-out;
-
     &:hover {
       transform: scale(1.1);
     }
   }
 }
-
-.modal-login {
-  position: fixed;
-  right: -400px;
-  top: 0;
-  width: 400px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 40px;
-  background-color: var(--color-active);
-  z-index: 2;
-  transition: transform 0.3s ease;
+@media only screen and (max-width: 600px) {
+  .b-menu-mobile{
+    width: 100%;
+  }
+  .b-menu{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0;
+  }
 }
-
-.modal-login.open {
-  transform: translateX(-400px);
-}
-
-.modal-post {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 20px;
-  background-color: var(--color-active);
-  border-radius: 20px;
-  z-index: 2;
-  transition: transform 0.3s ease;
-}
-
-// .modal-post.open{
-//   opacity: 1;
-//   transform: translateX(-400px);
-// }
