--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -23,13 +23,15 @@
     }
     &__image{
         width: 100%;
+        max-height: 300px;
+        object-fit: contain;
     }
     &__date{
         display: flex;
         justify-content: end;
         margin-right: 10px;
         min-height: 20px;
-        font-size: 16px;
+        font-size: 15px;
         font-family: Rokkitt-Regular;
         color: var(--color-active);
     }
@@ -49,19 +51,17 @@
         border-radius: 100%;     
         height: 80px;
         width: 80px;
-        &__default{
-            background-color: var(--color-active);
-        }
     }
     &__name{
         font-size: 14px;
         font-family: Rokkitt-Light;
     }
-    &__icon{
-        margin: 0px 5px;
-        cursor: pointer;
-        &:hover{
-            color: var(--color-active);
+}
+@media only screen and (max-width: 600px) {
+    .b-post{
+        &__image{
+            max-height: 300px;
+            object-fit: contain;
         }
     }
 }
