--- a/src/components/UploadFile/UploadFile.scss
+++ b/src/components/UploadFile/UploadFile.scss
@@ -6,18 +6,26 @@
   position: absolute;
   z-index: -1;
 }
-.file-input__label {
+.file-input-btn{
   cursor: pointer;
   display: inline-flex;
   align-items: center;
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #fff;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: Rokkitt-ExtraLight;
+  color: var(--color);
   padding: 10px 12px;
-  background-color: #4245a8;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  border: solid 2px var(--color);
+  border-radius: 5px;
+  transition: border .25s ease-in-out;
+  &:hover{
+    border: solid 2px var(--color-active);
+  }
+  &__upload{
+    &:hover{
+      color: var(--color-medium);
+      border: solid 2px var(--color-medium);
+    }
+  }
 }
 .file-input__label svg {
   height: 16px;
