--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,5 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+}
+@media only screen and (max-width: 600px) {
+    .b-home{
+        margin-bottom: 70px;
+    }
 }
