Frontend project COMPLETED

--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -22,3 +22,8 @@
         color: var(--color-active);
     }
 }
+@media only screen and (max-width: 600px) {
+    .b-user{
+        width: 350px;
+    }
+}
