--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -18,6 +18,9 @@
             height: 90px;
             top: 0px;
             width: 100vw;
+            
+        }
+        &__title{
             padding-right: 30px;
         }
     }
