--- a/src/components/ModalUser/ModalUser.scss
+++ b/src/components/ModalUser/ModalUser.scss
@@ -23,7 +23,7 @@
 }
 @media only screen and (max-width: 600px) {
   .modal-user{
-    width: 100vw;
+    width: 100%;
     top: 90px;
     left: 0;
     transform: none;
