--- a/src/pages/Account/Account.scss
+++ b/src/pages/Account/Account.scss
@@ -28,6 +28,8 @@
             height: 90px;
             top: 0px;
             width: 100vw;
+        }
+        &__title{
             padding-right: 30px;
         }
         &__main{
