--- a/src/styles/elements/_font-face.elements.scss
+++ b/src/styles/elements/_font-face.elements.scss
@@ -1,50 +1,24 @@
-// @font-face{
-//     font-family: Rokkitt-ExtraLight;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-ExtraLight.ttf');
-// }
-// @font-face{
-//     font-family: Rokkitt-Light;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Light.ttf');
-// }
-// @font-face{
-//     font-family: Rokkitt-Thin;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Thin.ttf');
-// }
-// @font-face{
-//     font-family: Rokkitt-Regular;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Regular.ttf');
-// }
-// @font-face{
-//     font-family: Rokkitt-Medium;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Medium.ttf');
-// }
-// @font-face{
-//     font-family: Rokkitt-SemiBold;
-//     src: url('../../../public/assets/fonts/rokkitt/Rokkitt-SemiBold.ttf');
-// }
-
-
 @font-face{
     font-family: Rokkitt-ExtraLight;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@100');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-ExtraLight.ttf');
 }
 @font-face{
     font-family: Rokkitt-Light;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@200');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Light.ttf');
 }
 @font-face{
     font-family: Rokkitt-Thin;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@300');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Thin.ttf');
 }
 @font-face{
     font-family: Rokkitt-Regular;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@400');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Regular.ttf');
 }
 @font-face{
     font-family: Rokkitt-Medium;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@500');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-Medium.ttf');
 }
 @font-face{
     font-family: Rokkitt-SemiBold;
-    src: url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@600');
+    src: url('../../../public/assets/fonts/rokkitt/Rokkitt-SemiBold.ttf');
 }
