Modify fonts routes

--- a/src/styles/elements/_font-face.elements.scss
+++ b/src/styles/elements/_font-face.elements.scss
@@ -1,24 +1,49 @@
 @font-face{
     font-family: Rokkitt-ExtraLight;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-ExtraLight.ttf');    
+    src: url('/assets/fonts/rokkitt/Rokkitt-ExtraLight.ttf');    
 }
 @font-face{
     font-family: Rokkitt-Light;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-Light.ttf');
+    src: url('/assets/fonts/rokkitt/Rokkitt-Light.ttf');
 }
 @font-face{
     font-family: Rokkitt-Thin;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-Thin.ttf');
+    src: url('/assets/fonts/rokkitt/Rokkitt-Thin.ttf');
 }
 @font-face{
     font-family: Rokkitt-Regular;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-Regular.ttf');
+    src: url('/assets/fonts/rokkitt/Rokkitt-Regular.ttf');
 }
 @font-face{
     font-family: Rokkitt-Medium;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-Medium.ttf');
+    src: url('/assets/fonts/rokkitt/Rokkitt-Medium.ttf');
 }
 @font-face{
     font-family: Rokkitt-SemiBold;
-    src: url('../../public/assets/fonts/rokkitt/Rokkitt-SemiBold.ttf');
+    src: url('/assets/fonts/rokkitt/Rokkitt-SemiBold.ttf');
 }
+
+// @font-face{
+//     font-family: Rokkitt-ExtraLight;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-ExtraLight.ttf');    
+// }
+// @font-face{
+//     font-family: Rokkitt-Light;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-Light.ttf');
+// }
+// @font-face{
+//     font-family: Rokkitt-Thin;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-Thin.ttf');
+// }
+// @font-face{
+//     font-family: Rokkitt-Regular;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-Regular.ttf');
+// }
+// @font-face{
+//     font-family: Rokkitt-Medium;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-Medium.ttf');
+// }
+// @font-face{
+//     font-family: Rokkitt-SemiBold;
+//     src: url('../../public/assets/fonts/rokkitt/Rokkitt-SemiBold.ttf');
+// }
