Update UserInfo component

--- a/src/components/UserInfo/UserInfo.scss
+++ b/src/components/UserInfo/UserInfo.scss
@@ -114,6 +114,10 @@
         outline: none;
     }
 }
+.b-btns-account{
+    display: flex;
+    gap: 20px;
+}
 .b-upload-hidden{
     display: none;
 }
