Repair login and reload app

--- a/src/components/Likes/Likes.scss
+++ b/src/components/Likes/Likes.scss
@@ -1,10 +1,10 @@
-.b-likes{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    &__icon{
-        font-size: 30px;
-        cursor: pointer;
-    }
-}
+// .b-likes{
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: 20px;
+//     &__icon{
+//         font-size: 30px;
+//         cursor: pointer;
+//     }
+// }
